@@ -1,3 +1,8 @@
+2006-06-13  Michael S. Tsirkin  <mst@mellanox.co.il>
+
+	* src/cq.c (mthca_poll_one): Add workaround for MemFree FW bug
+	that causes wrong WQE addr to be reported.
+
 2006-05-24  Roland Dreier  <rdreier@cisco.com>
 
 	* src/mthca.c: If <sysfs/libsysfs.h> is detected, include it
